links and forum

--- a/shop.html
+++ b/shop.html
@@ -55,7 +55,7 @@
 					<li class="shop-v"><a href="#">Магазин
 										</a></li>
 					<li><a href="/#steps">Как начать играть?</a></li>
-					<li><a href="http://forum.grand-rp.su">Форум</a></li>
+					<li><a href="https://vk.com/away.php?to=http%3A%2F%2Fmp32461d.beget.tech%2Findex.php&cc_key=">Форум</a></li>
 					<li><a target = "_blank" href="https://vk.com/im?media=&sel=478836671">Поддержка</a></li>
 					<li><a target = "_blank" href="https://www.youtube.com/channel/UCbvbWcNED6440a54T2tgtPw/" >Youtube<i class="youtube"></i></a></li>
 				</ul>
