--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 										
 					</a></li>
 					<li><a href="/#steps">Как начать играть?</a></li>
-					<li><a href="http://forum.grand-rp.su">Форум</a></li>
+					<li><a href="https://vk.com/away.php?to=http%3A%2F%2Fmp32461d.beget.tech%2Findex.php&cc_key=">Форум</a></li>
 					<li><a target = "_blank" href="https://vk.com/aleksey_kravchenkoo">Поддержка</a></li>
 					<li><a target = "_blank" href="https://www.youtube.com/channel/UCbvbWcNED6440a54T2tgtPw/" >Youtube<i class="youtube"></i></a></li>
 				</ul>
